// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Timeline /> should open the Timeline panel 1`] = `
.emotion-0 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: row-resize;
  height: 4px;
  margin-top: -2px;
  margin-bottom: -2px;
  z-index: 10;
}

.emotion-3 {
  padding-left: 8px;
  padding-right: 8px;
  background-color: #252525;
  color: #808080;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-bottom: 1px solid #3b3b3b;
}

.emotion-2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 4px;
  padding-left: 0;
}

.emotion-1 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 8px;
  color: #808080;
  padding: 4px;
}

.emotion-1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-1:hover,
.emotion-1.focus-visible:focus {
  color: #ffffff;
}

.emotion-1:hover svg,
.emotion-1.focus-visible:focus svg {
  opacity: 1;
}

.emotion-1[aria-disabled=true] {
  color: #808080;
}

.emotion-1:hover,
.emotion-1.focus-visible:focus {
  background-color: #2e2e2e;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 200px;
}

.emotion-8 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 0%;
  position: relative;
  margin-left: 200px;
  border-left: 1px solid #3b3b3b;
}

.emotion-4 {
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: col-resize;
  top: 0;
  bottom: 0;
  width: 4px;
  margin-left: -2px;
  margin-right: -2px;
  z-index: 10;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 44px;
}

.emotion-6 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: overlay;
}

.emotion-5 {
  width: 100%;
}

.emotion-10 {
  height: 200px;
}

<div
  style={
    Object {
      "alignItems": "stretch",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "nowrap",
    }
  }
>
  <div
    aria-label="Resize vertically"
    className="emotion-0"
    onMouseDown={[Function]}
  />
  <div
    className="emotion-3"
  >
    <div
      className="emotion-2"
    >
      <button
        aria-label="Close Timeline"
        className="emotion-1"
        onClick={[Function]}
        type="button"
      >
        Timeline
      </button>
    </div>
    <TimelineControls
      length={18}
      videoRef={
        Object {
          "current": Object {
            "addEventListener": [Function],
            "currentTime": 0,
            "duration": 18,
            "pause": [Function],
            "paused": true,
            "play": [Function],
            "removeEventListener": [Function],
          },
        }
      }
    />
    <TimelineCaptions
      initialTrackIndex={-1}
      videoRef={
        Object {
          "current": Object {
            "addEventListener": [Function],
            "currentTime": 0,
            "duration": 18,
            "pause": [Function],
            "paused": true,
            "play": [Function],
            "removeEventListener": [Function],
          },
        }
      }
    />
  </div>
  <div
    className="emotion-10"
  >
    <div
      className="emotion-9"
    >
      <div
        className="emotion-8"
      >
        <div
          className="emotion-4"
          onMouseDown={[Function]}
        />
        <TimelinePlayhead
          videoRef={
            Object {
              "current": Object {
                "addEventListener": [Function],
                "currentTime": 0,
                "duration": 18,
                "pause": [Function],
                "paused": true,
                "play": [Function],
                "removeEventListener": [Function],
              },
            }
          }
          zoom={100}
        />
        <div
          className="emotion-7"
        >
          <TimelineFilterTracks
            dispatch={[Function]}
            settings={
              Object {
                "filter": "",
                "modules": Object {},
                "modulesWidth": 200,
                "zoom": 100,
              }
            }
          />
          <div
            className="emotion-6"
          >
            <div
              className="emotion-5"
            >
              <TimelineRuler
                length={18}
              />
            </div>
          </div>
        </div>
        <TimelineAggregate
          dispatch={[Function]}
          length={18}
          settings={
            Object {
              "filter": "",
              "modules": Object {},
              "modulesWidth": 200,
              "zoom": 100,
            }
          }
          timelineHeight={200}
          timelines={Object {}}
          videoRef={
            Object {
              "current": Object {
                "addEventListener": [Function],
                "currentTime": 0,
                "duration": 18,
                "pause": [Function],
                "paused": true,
                "play": [Function],
                "removeEventListener": [Function],
              },
            }
          }
        />
        <TimelineTimelines
          dispatch={[Function]}
          length={18}
          settings={
            Object {
              "filter": "",
              "modules": Object {},
              "modulesWidth": 200,
              "zoom": 100,
            }
          }
          timelines={Object {}}
          videoRef={
            Object {
              "current": Object {
                "addEventListener": [Function],
                "currentTime": 0,
                "duration": 18,
                "pause": [Function],
                "paused": true,
                "play": [Function],
                "removeEventListener": [Function],
              },
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<Timeline /> should open the Timeline panel 2`] = `
.emotion-0 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: row-resize;
  height: 4px;
  margin-top: -2px;
  margin-bottom: -2px;
  z-index: 10;
}

.emotion-3 {
  padding-left: 8px;
  padding-right: 8px;
  background-color: #252525;
  color: #808080;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-bottom: 1px solid #3b3b3b;
}

.emotion-2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 4px;
  padding-left: 0;
}

.emotion-1 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 8px;
  color: #808080;
  padding: 4px;
}

.emotion-1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-1:hover,
.emotion-1.focus-visible:focus {
  color: #ffffff;
}

.emotion-1:hover svg,
.emotion-1.focus-visible:focus svg {
  opacity: 1;
}

.emotion-1[aria-disabled=true] {
  color: #808080;
}

.emotion-1:hover,
.emotion-1.focus-visible:focus {
  background-color: #2e2e2e;
}

.emotion-10 {
  height: 0;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 200px;
}

.emotion-8 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 0%;
  position: relative;
  margin-left: 200px;
  border-left: 1px solid #3b3b3b;
}

.emotion-4 {
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: col-resize;
  top: 0;
  bottom: 0;
  width: 4px;
  margin-left: -2px;
  margin-right: -2px;
  z-index: 10;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 44px;
}

.emotion-6 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: overlay;
}

.emotion-5 {
  width: 100%;
}

<div
  style={
    Object {
      "alignItems": "stretch",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "nowrap",
    }
  }
>
  <div
    aria-label="Resize vertically"
    className="emotion-0"
    onMouseDown={[Function]}
  />
  <div
    className="emotion-3"
  >
    <div
      className="emotion-2"
    >
      <button
        aria-label="Open Timeline"
        className="emotion-1"
        onClick={[Function]}
        type="button"
      >
        Timeline
      </button>
    </div>
    <TimelineControls
      length={18}
      videoRef={
        Object {
          "current": Object {
            "addEventListener": [Function],
            "currentTime": 0,
            "duration": 18,
            "pause": [Function],
            "paused": true,
            "play": [Function],
            "removeEventListener": [Function],
          },
        }
      }
    />
    <TimelineCaptions
      initialTrackIndex={-1}
      videoRef={
        Object {
          "current": Object {
            "addEventListener": [Function],
            "currentTime": 0,
            "duration": 18,
            "pause": [Function],
            "paused": true,
            "play": [Function],
            "removeEventListener": [Function],
          },
        }
      }
    />
  </div>
  <div
    className="emotion-10"
  >
    <div
      className="emotion-9"
    >
      <div
        className="emotion-8"
      >
        <div
          className="emotion-4"
          onMouseDown={[Function]}
        />
        <TimelinePlayhead
          videoRef={
            Object {
              "current": Object {
                "addEventListener": [Function],
                "currentTime": 0,
                "duration": 18,
                "pause": [Function],
                "paused": true,
                "play": [Function],
                "removeEventListener": [Function],
              },
            }
          }
          zoom={100}
        />
        <div
          className="emotion-7"
        >
          <TimelineFilterTracks
            dispatch={[Function]}
            settings={
              Object {
                "filter": "",
                "modules": Object {},
                "modulesWidth": 200,
                "zoom": 100,
              }
            }
          />
          <div
            className="emotion-6"
          >
            <div
              className="emotion-5"
            >
              <TimelineRuler
                length={18}
              />
            </div>
          </div>
        </div>
        <TimelineAggregate
          dispatch={[Function]}
          length={18}
          settings={
            Object {
              "filter": "",
              "modules": Object {},
              "modulesWidth": 200,
              "zoom": 100,
            }
          }
          timelineHeight={200}
          timelines={Object {}}
          videoRef={
            Object {
              "current": Object {
                "addEventListener": [Function],
                "currentTime": 0,
                "duration": 18,
                "pause": [Function],
                "paused": true,
                "play": [Function],
                "removeEventListener": [Function],
              },
            }
          }
        />
        <TimelineTimelines
          dispatch={[Function]}
          length={18}
          settings={
            Object {
              "filter": "",
              "modules": Object {},
              "modulesWidth": 200,
              "zoom": 100,
            }
          }
          timelines={Object {}}
          videoRef={
            Object {
              "current": Object {
                "addEventListener": [Function],
                "currentTime": 0,
                "duration": 18,
                "pause": [Function],
                "paused": true,
                "play": [Function],
                "removeEventListener": [Function],
              },
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<Timeline /> should render properly 1`] = `
.emotion-0 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: row-resize;
  height: 4px;
  margin-top: -2px;
  margin-bottom: -2px;
  z-index: 10;
}

.emotion-3 {
  padding-left: 8px;
  padding-right: 8px;
  background-color: #252525;
  color: #808080;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-bottom: 1px solid #3b3b3b;
}

.emotion-2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 4px;
  padding-left: 0;
}

.emotion-1 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 8px;
  color: #808080;
  padding: 4px;
}

.emotion-1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-1:hover,
.emotion-1.focus-visible:focus {
  color: #ffffff;
}

.emotion-1:hover svg,
.emotion-1.focus-visible:focus svg {
  opacity: 1;
}

.emotion-1[aria-disabled=true] {
  color: #808080;
}

.emotion-1:hover,
.emotion-1.focus-visible:focus {
  background-color: #2e2e2e;
}

.emotion-10 {
  height: 0;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 200px;
}

.emotion-8 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 0%;
  position: relative;
  margin-left: 200px;
  border-left: 1px solid #3b3b3b;
}

.emotion-4 {
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: col-resize;
  top: 0;
  bottom: 0;
  width: 4px;
  margin-left: -2px;
  margin-right: -2px;
  z-index: 10;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 44px;
}

.emotion-6 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: overlay;
}

.emotion-5 {
  width: 100%;
}

<div
  style={
    Object {
      "alignItems": "stretch",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "nowrap",
    }
  }
>
  <div
    aria-label="Resize vertically"
    className="emotion-0"
    onMouseDown={[Function]}
  />
  <div
    className="emotion-3"
  >
    <div
      className="emotion-2"
    >
      <button
        aria-label="Open Timeline"
        className="emotion-1"
        onClick={[Function]}
        type="button"
      >
        Timeline
      </button>
    </div>
    <TimelineControls
      length={18}
      videoRef={
        Object {
          "current": undefined,
        }
      }
    />
    <TimelineCaptions
      initialTrackIndex={-1}
      videoRef={
        Object {
          "current": undefined,
        }
      }
    />
  </div>
  <div
    className="emotion-10"
  >
    <div
      className="emotion-9"
    >
      <div
        className="emotion-8"
      >
        <div
          className="emotion-4"
          onMouseDown={[Function]}
        />
        <TimelinePlayhead
          videoRef={
            Object {
              "current": undefined,
            }
          }
          zoom={100}
        />
        <div
          className="emotion-7"
        >
          <TimelineFilterTracks
            dispatch={[Function]}
            settings={
              Object {
                "filter": "",
                "modules": Object {},
                "modulesWidth": 200,
                "zoom": 100,
              }
            }
          />
          <div
            className="emotion-6"
          >
            <div
              className="emotion-5"
            >
              <TimelineRuler
                length={18}
              />
            </div>
          </div>
        </div>
        <TimelineAggregate
          dispatch={[Function]}
          length={18}
          settings={
            Object {
              "filter": "",
              "modules": Object {},
              "modulesWidth": 200,
              "zoom": 100,
            }
          }
          timelineHeight={200}
          timelines={Object {}}
          videoRef={
            Object {
              "current": undefined,
            }
          }
        />
        <TimelineTimelines
          dispatch={[Function]}
          length={18}
          settings={
            Object {
              "filter": "",
              "modules": Object {},
              "modulesWidth": 200,
              "zoom": 100,
            }
          }
          timelines={Object {}}
          videoRef={
            Object {
              "current": undefined,
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;
